# opsdroid

./: .codecov.yaml  .coveragerc  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  0.19.0  CHAITANYA  CHANGE  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SOLUTION 1  TOX.INI2  appveyor.yml  codecov.yml  commit_change.py  configuration.yaml  conftest.py  emailSending using Python  entrypoint.sh  mkdocs.yml  pylintrc  pyproject.toml  readme.md  requirements.txt  requirements_dev.txt  requirements_readthedocs.txt  requirements_test.txt  setup.cfg  setup.py  sqlite.db  switched json load to use object_hook to fix data serialization  (+5 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  labeler.yml  release-drafter.yml  stale.yml
.github/ISSUE_TEMPLATE/: general.md
.github/workflows/: .ci.yml.kate-swp  ci.yml  deploy-docker-dev.yml  deploy-docker.yml  deploy-pypi.yml  deploy.yml  labeler.yml  pythonapp.yml
docs/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  Readme.md  cli.md  cli_kor.md  command-center.md  conf.py  configuration-reference.md  configuration.md  configuration_kor.md  constraints.md  contributing.md  exposing.md  exposing_kor.md  getting-started.md  getting_started.md  index.md  installation.md  maintainers.md  overview.md  packaging.md  quickstart.md  rest-api.md  testing.md  why.md
docs/_static/: custom.css
docs/connectors/: ciscospark.md  custom.md  custom_kor.md  discord.md  facebook.md  facebook_kor.md  github.md  github_kor.md  gitlab.md  gitter.md  gitter_kor.md  index.md  index_kor.md  mastodon.md  matrix.md  matrix_kor.md  mattermost.md  mattermost_kor.md  rocketchat.md  rocketchat_kor.md  shell.md  shell_kor.md  slack.md  sms.md  teams.md  telegram.md  twitch.md  twitter.md  webexteams.md  websocket.md
docs/contributing/: documentation.md  index.md  issues.md  localization.md  new_modules.md  testing.md  testing.rst  workflow.md
docs/database/: redis.yml
docs/databases/: custom.md  index.md  matrix.md  mongo.md  postgres.md  redis.md  sqlite.md
docs/diagrams/: Event Flow.drawio
docs/examples/: Flip-a-coin_Kor.md  authorization.md  bye-skill.md  contact-manager.md  flip-a-coin.md  how-are-you.md  how-are-you_Kor.md  index.md  index_Kor.md  introduction.md  new_File.md  random.md  skill-weather.md  stocks-portfolio.md  stocks-portfolio_Kor.md  weather.md  weather_Kor.md
docs/extending/: connectors.md  databases.md  events.md  intro.md  packaging.md  skills.md
docs/maintaining/: index.md  making-a-release.md  overview.md  supported-python-versions.md  testing.md  testing.rst
docs/matchers/: always.md  api.ai.md  crontab.md  dialogflow.md  event.md  luis.ai.md  overview.md  parse_format.md  rasanlu.md  recast.ai.md  regex.md  rss.md  sapcai.md  watson.md  webhook.md  wit.ai.md
docs/parsers/: api.ai.md  crontab.md  overview.md  regex.md  webhook.md
docs/project/: making-a-release.md  supported-python-versions.md
docs/skills/: constraints.md  events.md  index.md  memory.md  setup.md
docs/tutorial/: getting_started.md
docs/tutorials/: basic-skill.md  create-weather-skill.md  introduction-vim.md  introduction.md
list/: pyvenv.cfg
opsdroid/: __init__.py  __main__.py  _version.py  conftest.py  connector.py  const.py  constraints.py  core.py  database.py  events.py  helper.py  loader.py  logging.py  matchers.py  memory.py  message.py  skills.py  web.py
opsdroid-env/: pyvenv.cfg
opsdroid-skills/skill-bye/: __init__.py
opsdroid/cli/: __init__.py  config.py  logs.py  start.py  utils.py  version.py
opsdroid/configuration/: __init__.py  constructors.py  default.yaml  examle_1.yaml  example1_configuration.yaml  example_configuration.yaml  schema.yaml  shema.yaml  test_load.py  validation.py
opsdroid/connector/: __init__.py
opsdroid/database/: __init__.py
opsdroid/parsers/: __init__.py  always.py  apiai.py  catchall.py  crontab.py  dialogflow.py  event_type.py  lex.py  luisai.py  mention.py  parseformat.py  rasanlu.py  recastai.py  regex.py  sapcai.py  snipsnlu.py  watson.py  witai.py
opsdroid/skill/: __init__.py  test_skill.py
opsdroid/testing/: __init__.py  asynccontextmanager.py  const.py  external_api.py  fixtures.py  helpers.py  utils.py
opsdroid/tests/: test_connector.py  test_constraints.py  test_core.py  test_helper.py  test_logging.py  test_matchers.py  test_memory.py  test_message.py  test_web.py
password_skill/: __init__.py
scripts/: requirements.txt  update_example_config.py
scripts/release_notes/: README.md  release_notes.py
scripts/update_example_config/: README.md  configuration.j2  update_example_config.py
tests/: .test_connector_matrix.py.swp  __init__.py  test_cli.py  test_configuration.py  test_connector.py  test_connector_ciscospark.py  test_connector_facebook.py  test_connector_github.py  test_connector_gitter.py  test_connector_matrix.py  test_connector_mattermost.py  test_connector_rocketchat.py  test_connector_rss.py  test_connector_shell.py  test_connector_slack.py  test_connector_slack_creator.py  test_connector_sms.py  test_connector_telegram.py  test_connector_twitter.py  test_connector_webexteams.py  test_connector_websocket.py  test_constraints.py  test_core.py  test_database.py  test_database_matrix.py  test_database_mongo.py  test_database_redis.py  test_database_sqlite.py  test_events.py  test_helper.py  test_loader.py  test_logging.py  test_main.py  test_matchers.py  test_memory.py  test_message.py  test_parser_always.py  test_parser_apiai.py  test_parser_catchall.py  test_parser_crontab.py  (+15 more)
tests/configs/: broken.yaml  broken_modules.yaml  broken_without_connectors.yaml  example_configuration_isBroken.yaml  example_valid.yaml  exploit.yaml  full_broken.yaml  full_valid.yaml  include_exploit.yaml  minimal.yaml  minimal_2.yaml  minimal_with_envs.json  minimal_with_envs.yaml  minimal_with_include.yaml  valid_case_sensitivity.yaml  valid_without_db_and_parsers.yaml  valid_without_wellcome_message.yaml
tests/mockmodules/: __init__.py
tests/ssl/: cert.pem  (+1 more)
(+246 files in other folders)
