[metadata]
name = opsdroid
license = Apache License 2.0
url = https://opsdroid.github.io/
download_url = https://github.com/opsdroid/opsdroid/releases
author = Jacob Tomlinson
author_email = jacob@tom.linson.uk
description = "An open source ChatOps bot framework."
long_description = file: README.md
long_description_content_type = text/markdown
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Chat
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    bot
    bot-framework
    opsdroid
    botkit
    python3
    asyncio
    chatops
    devops
    nlu

[options]
include_package_data = True
zip_safe = False
packages = find:
test_suite = tests
setup_requires = babel
install_requires =
	aiohttp==3.6.2
	appdirs==1.4.4
	Babel==2.8.0
	click==7.1.2
	multidict==4.7.6
	nbconvert==5.6.1
	nbformat==5.0.6
	opsdroid-get-image-size==0.2.2
	puremagic==1.9
	pyyaml==5.3.1
	setuptools==46.2.0
	tailer==0.4.1
	websockets==8.1
	voluptuous==0.11.7
	watchgod==0.6;python_version>="3.6"

[options.packages.find]
exclude =
	tests
	tests.*
	modules
	modules.*
	docs
	docs.*

[options.entry_points]
console_scripts =
	opsdroid = opsdroid.cli:cli

[options.extras_require]
# connectors
connector-matrix =
	bleach==3.1.5
	matrix-nio==0.14.0
connector-mattermost =
	mattermostdriver==7.0.1
connector-slack =
	certifi==2020.4.5.2
	slackclient==2.6.2
	emoji==0.5.4
connector-webex =
	webexteamssdk==1.3
# parsers
parser-regex =
	regex==2020.5.7
parser-parse =
	parse==1.15.0
parser-cron =
	pycron==1.0.0
parser-rasanlu =
	arrow==0.15.6
parser-watson =
	ibm-watson==4.4.1
# databases
database-redis =
	aioredis==1.3.1
database-sqlite =
	aiosqlite==0.13.0
database-mongo =
	motor==2.1.0

[wheel]
universal = 1

[tool:pytest]
testpaths = opsdroid tests
norecursedirs = .git testing_config
mock_use_standalone_module = true

[flake8]
max-line-length = 80
exclude = .venv,.git,.tox,docs,www_static,venv,bin,lib,deps,build,modules,.eggs
select = C,E,F,W,B,B950
ignore = E203,E501,W503,F821

[pydocstyle]
ignore = D202,D203,D212,D213,D406,D407

[versioneer]
VCS = git
style = pep440
versionfile_source = opsdroid/_version.py
versionfile_build = opsdroid/_version.py
tag_prefix =
parentdir_prefix =

[extract_messages]
input_dirs = opsdroid
output_file = opsdroid/locale/opsdroid.pot

[init_catalog]
domain = opsdroid
input_file = opsdroid/locale/opsdroid.pot
output_dir = opsdroid/locale

[update_catalog]
domain = opsdroid
input_file = opsdroid/locale/opsdroid.pot
output_dir = opsdroid/locale

[compile_catalog]
domain = opsdroid
directory = opsdroid/locale

